<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/layout_root"
    android:paddingBottom="10dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_topbanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonReset"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="ResetScore"
            android:text="@string/text_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_reset" />

        <TextView
            android:id="@+id/textView_Score"
            android:layout_width="wrap_content"
            android:layout_height="36dp"


            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/text_score"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/buttonReset"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPlrX"
            android:layout_width="wrap_content"
            android:layout_height="36dp"

            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/text_PlrX"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_Score"
            app:layout_constraintStart_toEndOf="@+id/textView_Score" />

        <TextView
            android:id="@+id/textViewScoreX"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/_00"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewPlrX"
            app:layout_constraintStart_toEndOf="@+id/textViewPlrX" />

        <TextView
            android:id="@+id/textViewPlrO"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/text_PlrO"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewScoreX"
            app:layout_constraintStart_toEndOf="@+id/textViewScoreX" />

        <TextView
            android:id="@+id/textViewScoreO"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/textViewPlrO"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/_00"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewPlrO"
            app:layout_constraintStart_toEndOf="@+id/textViewPlrO" />


        <TextView
            android:id="@+id/textView_StartLabel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"

            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="@string/text_StartWith"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/buttonStart"
            app:layout_constraintTop_toTopOf="@+id/buttonStart" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="192dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textView_StartLabel"
            app:layout_constraintTop_toTopOf="@+id/textView_StartLabel">

            <RadioButton
                android:id="@+id/radioButtonX"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:gravity="center_vertical"
                android:onClick="onRadioButtonClicked"
                android:text="@string/apos_x_apos" />

            <RadioButton
                android:id="@+id/radioButtonO"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:gravity="center_vertical"
                android:onClick="onRadioButtonClicked"
                android:text="@string/apos_o_apos" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="395dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

        <Button
            android:id="@+id/buttonStart"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="ClearAll"
            android:text="@string/text_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonReset" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:background="#fffffcfe"
        android:orientation="vertical"
        android:id="@+id/layout_tiles"
        android:focusable="true"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="120dp"
            android:background="@android:color/holo_blue_dark"
            android:orientation="horizontal"
            android:outlineProvider="background">

            <TextView
                android:id="@+id/textView_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.33"
                android:background="#ffeffffc"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.33"
                android:background="#ffb8ffe9"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.333"
                android:background="#ffeffffc"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:outlineProvider="bounds"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:divider="#ff0a07ff"
            android:background="@android:color/holo_blue_dark">

            <TextView
                android:id="@+id/textView_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.33"
                android:background="#ffb8ffe9"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.33"
                android:background="#ffeffffc"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.33"
                android:background="#ffb8ffe9"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_dark">

            <TextView
                android:id="@+id/textView_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.33"
                android:background="#ffeffffc"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.33"
                android:background="#ffb8ffe9"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.33"
                android:background="#ffeffffc"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="OnTileClicked"
                android:text="@string/text_empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
